[gd_scene load_steps=2 format=3 uid="uid://bf0cuwnnld7er"]

[ext_resource type="Script" path="res://Scripts/game_generator.gd" id="1_7kfjj"]

[node name="game_generator" type="Control" node_paths=PackedStringArray("label", "button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kfjj")
label = NodePath("Label")
button = NodePath("Button")

[node name="Button" type="Button" parent="." groups=["click_to_auto"]]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Hire a Teen To Pick Them Off Ground"

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Roaches Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
